--- a/src/animation.css
+++ b/src/animation.css
@@ -15,3 +15,24 @@
     transform: scale(1);
   }
 }
+
+.found-cell-animation {
+  animation: found-cell-animation 1.5s ease-out 0s 1 forwards;
+}
+
+@keyframes found-cell-animation {
+  0% {
+    transform: scale(0.3);
+    background-color: yellow;
+  }
+
+  50% {
+    transform: scale(1.1);
+    background-color: yellow;
+  }
+
+  100% {
+    transform: scale(1);
+    background-color: yellow;
+  }
+}
