--- a/src/animation.css
+++ b/src/animation.css
@@ -17,7 +17,7 @@
 }
 
 .found-cell-animation {
-  animation: found-cell-animation 1.5s ease-out 0s 1 forwards;
+  animation: found-cell-animation 0.9s ease-out 0s 1 forwards;
 }
 
 @keyframes found-cell-animation {
@@ -34,5 +34,31 @@
   100% {
     transform: scale(1);
     background-color: yellow;
+  }
+}
+
+.visited-cell-animation {
+  animation: visited-cell-animation 0.75s ease-out 0s 1 forwards;
+}
+
+@keyframes visited-cell-animation {
+  0% {
+    transform: scale(.3);
+    background-color: rgba(0, 0, 66, 0.75);
+    border-radius: 100%;
+  }
+
+  50% {
+    background-color: rgba(17, 104, 217, 0.75);
+  }
+
+  75% {
+    transform: scale(1.2);
+    background-color: rgba(0, 217, 159, 0.75)
+  }
+
+  100% {
+    transform: scale(1.0);
+    background-color: rgba(0, 190, 218, 0.75);
   }
 }
