--- a/src/animation.css
+++ b/src/animation.css
@@ -17,7 +17,7 @@
 }
 
 .found-cell-animation {
-  animation: found-cell-animation 0.75s ease-out 0s 1 forwards;
+  animation: found-cell-animation 0.50s ease-in 0s 1 forwards;
 }
 
 @keyframes found-cell-animation {
@@ -27,7 +27,7 @@
   }
 
   50% {
-    transform: scale(1.1);
+    transform: scale(1.2);
     background-color: yellow;
   }
 
